# RodrigoRivera

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  MICRO_LIVE_EXECUTION.md
replay/btcusdt/: calm_drift.jsonl  liquidity_hunt.jsonl  spread_shock.jsonl
src/el_toro_v3/: __init__.py  attention.py  demo.py  domain.py  first_breath.py  memory.py  reflex.py  replay.py  router.py  scoring.py  upstream.py
tests/: test_attention.py  test_first_breath.py  test_reflex_router.py  test_replay.py  test_upstream_adapter.py
